--- a/pom.xml
+++ b/pom.xml
@@ -20,16 +20,18 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/de.julielab/aliasi-lingpipe -->
+        <dependency>
+            <groupId>de.julielab</groupId>
+            <artifactId>aliasi-lingpipe</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.apache.opennlp</groupId>
             <artifactId>opennlp-tools</artifactId>
             <version>1.8.4</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/cc.mallet/mallet -->
-        <dependency>
-            <groupId>cc.mallet</groupId>
-            <artifactId>mallet</artifactId>
-            <version>2.0.8</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
